--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "frontend-portfolio",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
+  "homepage": "https://Gopa123l.github.io/portfolio-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,7 +15,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {    
+  "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
